feat: optimize console api /detect (#417)